--- a/src/app/components/managers/managers.component.css
+++ b/src/app/components/managers/managers.component.css
@@ -1,16 +1,5 @@
-.example-spacer {
-    flex: 1 1 auto;
-  }
-  
-.mat-toolbar{
-background-color: #22c069;
-& span{
-    color: #ffffff ;
-}
-}
-
-.bar{
-    width: 100%;
+:host {
     display: flex;
-    justify-content: space-between;
-}
+    flex-direction: column;
+    align-items: flex-start;
+  }
