--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Manager settings</h1>
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards  | async; let i = index" [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
@@ -18,6 +17,11 @@
         <mat-card-content class="dashboard-card-content">
           <ng-container *ngIf="i === 1">
             <div><app-catalogs></app-catalogs></div>
+          </ng-container>
+        </mat-card-content>
+        <mat-card-content class="dashboard-card-content">
+          <ng-container *ngIf="i === 0">
+            <div><app-managers></app-managers></div>
           </ng-container>
         </mat-card-content>
       </mat-card>
