--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,11 +3,23 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>
+      <!-- Reemplaza 'Menu' con la imagen -->
+      <div class="logo-container"><img class="logo" src="http://apl-02/LAFITask/LAFISE%20logo.png"></div>
+    </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <div class="nav-item">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+        <span>Gestores</span>
+      </div>   
+      <div class="nav-item">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+        <span>Gestores</span>
+      </div>   
+      <div class="nav-item">
+        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+        <span>Gestores</span>
+      </div>    
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,7 +32,15 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Manager</span>
+      <div class="nav-container">
+        <span>Managers</span>
+        <mat-form-field>
+          <mat-label>Escoja el país</mat-label>
+          <mat-select [(value)]="selectedBank" class="select-bank" (selectionChange)="onPaisSeleccionado()">
+            <mat-option [value]="option.value" *ngFor="let option of Banks">{{ option.viewValue }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
     </mat-toolbar>
     <!-- Add Content Here -->
     <app-dashboard></app-dashboard>
